{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 15,
  "lineage": "b1acba15-69b8-6788-f924-0e74125db4e7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_hub",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/networkSecurityGroups/NSG-HUB-GATEWAY",
            "location": "northeurope",
            "name": "NSG-HUB-GATEWAY",
            "resource_group_name": "RG-SAPLAB",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "internet_login",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Created_By": "Vinod Deshmukh",
              "Created_Using": "Terraform",
              "Environment": "Proof of Concept",
              "Name": "Network Layer"
            }
          },
          "depends_on": [
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/networkSecurityGroups/NSG-HUB-DMZ",
            "location": "northeurope",
            "name": "NSG-HUB-DMZ",
            "resource_group_name": "RG-SAPLAB",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "internet_login",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Created_By": "Vinod Deshmukh",
              "Created_Using": "Terraform",
              "Environment": "Proof of Concept",
              "Name": "Network Layer"
            }
          },
          "depends_on": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_spoke",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/networkSecurityGroups/NSG-SPOKE-APPLICATION",
            "location": "northeurope",
            "name": "NSG-SPOKE-APPLICATION",
            "resource_group_name": "RG-SAPLAB",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "internet_login",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Created_By": "Vinod Deshmukh",
              "Created_Using": "Terraform",
              "Environment": "Proof of Concept",
              "Name": "Network Layer"
            }
          },
          "depends_on": [
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/networkSecurityGroups/NSG-SPOKE-DATABASE",
            "location": "northeurope",
            "name": "NSG-SPOKE-DATABASE",
            "resource_group_name": "RG-SAPLAB",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "internet_login",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Created_By": "Vinod Deshmukh",
              "Created_Using": "Terraform",
              "Environment": "Proof of Concept",
              "Name": "Network Layer"
            }
          },
          "depends_on": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_hub",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-HUB/subnets/SUBNET_HUB-GATEWAY",
            "name": "SUBNET_HUB-GATEWAY",
            "network_security_group_id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/networkSecurityGroups/NSG-HUB-GATEWAY",
            "resource_group_name": "RG-SAPLAB",
            "virtual_network_name": "VNET-HUB"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg_hub",
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-HUB/subnets/SUBNET_HUB-DMZ",
            "name": "SUBNET_HUB-DMZ",
            "network_security_group_id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/networkSecurityGroups/NSG-HUB-DMZ",
            "resource_group_name": "RG-SAPLAB",
            "virtual_network_name": "VNET-HUB"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg_hub",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_spoke",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-SPOKE/subnets/SUBNET_SPOKE-APPLICATION",
            "name": "SUBNET_SPOKE-APPLICATION",
            "network_security_group_id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/networkSecurityGroups/NSG-SPOKE-APPLICATION",
            "resource_group_name": "RG-SAPLAB",
            "virtual_network_name": "VNET-SPOKE"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg_spoke",
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/24",
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-SPOKE/subnets/SUBNET_SPOKE-DATABASE",
            "name": "SUBNET_SPOKE-DATABASE",
            "network_security_group_id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/networkSecurityGroups/NSG-SPOKE-DATABASE",
            "resource_group_name": "RG-SAPLAB",
            "virtual_network_name": "VNET-SPOKE"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg_spoke",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-HUB",
            "location": "northeurope",
            "name": "VNET-HUB",
            "resource_group_name": "RG-SAPLAB",
            "tags": {
              "Component": "Network-Layer",
              "Created_By": "Vinod Deshmukh",
              "Created_Using": "Terraform",
              "Environment": "Proof of Concept",
              "Name": "Network Layer"
            }
          },
          "depends_on": [
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-SPOKE",
            "location": "northeurope",
            "name": "VNET-SPOKE",
            "resource_group_name": "RG-SAPLAB",
            "tags": {
              "Component": "Network-Layer",
              "Created_By": "Vinod Deshmukh",
              "Created_Using": "Terraform",
              "Environment": "Proof of Concept",
              "Name": "Network Layer"
            }
          },
          "depends_on": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "VNET-P1",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": false,
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-HUB/virtualNetworkPeerings/HUB",
            "name": "HUB",
            "remote_virtual_network_id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-SPOKE",
            "resource_group_name": "RG-SAPLAB",
            "use_remote_gateways": false,
            "virtual_network_name": "VNET-HUB"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet[0]",
            "azurerm_virtual_network.vnet[1]",
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": false,
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-HUB/virtualNetworkPeerings/HUB",
            "name": "HUB",
            "remote_virtual_network_id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-SPOKE",
            "resource_group_name": "RG-SAPLAB",
            "use_remote_gateways": false,
            "virtual_network_name": "VNET-HUB"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet[0]",
            "azurerm_virtual_network.vnet[1]",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "VNET-P2",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": false,
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-SPOKE/virtualNetworkPeerings/SPOKE",
            "name": "SPOKE",
            "remote_virtual_network_id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-HUB",
            "resource_group_name": "RG-SAPLAB",
            "use_remote_gateways": false,
            "virtual_network_name": "VNET-SPOKE"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet[0]",
            "azurerm_virtual_network.vnet[1]",
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": false,
            "id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-SPOKE/virtualNetworkPeerings/SPOKE",
            "name": "SPOKE",
            "remote_virtual_network_id": "/subscriptions/7e41ed69-38e5-4b72-98ef-85c6830275c7/resourceGroups/RG-SAPLAB/providers/Microsoft.Network/virtualNetworks/VNET-HUB",
            "resource_group_name": "RG-SAPLAB",
            "use_remote_gateways": false,
            "virtual_network_name": "VNET-SPOKE"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet[0]",
            "azurerm_virtual_network.vnet[1]",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}